--- a/Pages/view.html
+++ b/Pages/view.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="file:/Font%20Awesome%20Icons/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body class="view-page">
     
